--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@ Troop 63 Prototype Website
 </title>
 </head>
 <body>
+  <header>
+    <a class="button" href="about">About Us</a>
+    <a class="button" href="support">Support Us</a>
+    <a class="button" href="test">test</a>
+  </header>
 <footer>
 </footer>
 </body>
