--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Troop 63 Prototype Website
   <header>
     <a class="button" href="about">About Us</a>
     <a class="button" href="support">Support Us</a>
-    <a class="button" href="test">test</a>
+    <a class="button" href="contact">Contact Us</a>
   </header>
 <footer>
 </footer>
