--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <title>
 Troop 63 Prototype Website
 </title>
+    <link rel="icon" type="image/png" href="https://codehs.com/uploads/17748ea7887e53f9f55e8c3f49a3f9f8">
     <link rel="stylesheet" href="global.css">
 </head>
 <body>
