--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ Troop 63 Prototype Website
     <a class="button" href="support">Support Us</a>
     <a class="button" href="contact">Contact Us</a>
   </header>
+    <h1>
+        This Site Is Still Under Construction
+    </h1>
 <footer>
 </footer>
 </body>
