--- a/404.html
+++ b/404.html
@@ -1,24 +1,29 @@
 <html>
 <head>
-<title>
-Troop 63 Prototype Website
-</title>
-  <link rel="icon" type="image/png" href="https://codehs.com/uploads/17748ea7887e53f9f55e8c3f49a3f9f8">
+  <title>Troop 63 Website</title>
+  <link rel="icon" type="image/png" href="https://codehs.com/uploads/cb46df9431dd7ffe3372f71a3c7a97a8">
   <link rel="stylesheet" href="global.css">
 </head>
 <body>
-  <header>
-    <a class="button" href="about">About Us</a>
-    <a class="button" href="support">Support Us</a>
-    <a class="button" href="contact">Contact Us</a>
-  </header>
-  <h1> Oh No!
-<br>
-  Looks Like This Page Doesn't Exist
-<br>
-  :(
-</h1>
-<footer>
-</footer>
+  <center>
+    <h1 style="color:black;">
+      Oh No! 
+      <br>
+      Looks like this page doesn't exist! :(
+      <br>
+      If you think this is a bug, please reach out 
+      <a href="contact">
+        here
+      </a>
+    </h1>
+  </center>
+  <script src="footer.js">
+  </script>
+  <script src="global-header.js">
+  </script>
+  <script src="sidebar.js">
+  </script>
+  <script src="searchbar.js">    
+  </script>
 </body>
 </html>
