--- a/index.html
+++ b/index.html
@@ -14,15 +14,7 @@
       <br>
       <br>
       <br>
-      During Fall of 2014, students from the West Des Moines, Waukee, Dowling Catholic, and Des Moines Public Schools were concerned for the future of the FIRST program in Central Iowa. Creating a new FRC team was in order to revive the robotics community. At the end of the 2015-2016 FTC season, eight FTC teams took advantage of this idea to help preserve and strengthen the FIRST program. These teams grouped together and built the foundation for a strong FRC team that could revitalize the FIRST program in the area.
-      <br>
-      <br>
-      <br>
-      In August of 2016, the first meeting was held at Valley High School, led by Engineering Instructor, Dean Lange, and 12 students from the eight FTC teams in attendance. Two months later, FRC team 6419 ICE had grown to over 40 members and began preparing for their first competition. ICE obtained three FIRST rookie awards during 2017 and constructed the base for a strong community of learners and mentors.
-      <br>
-      <br>
-      <br>
-      Continuing to grow through the next few years of competition and outreach, ICE Robotics has developed into one of the largest programs in Iowa. We dedicate ourselves to inspire and build up future generations determined for success and to better the world.
+      put text here
     </div>
   </center>
   <div id="carousel-container">
