--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
       <br>
       Looks like this page doesn't exist! :(
       <br>
-      If you think this is a bug, please reach out test
+      If you think this is a bug, please reach out 
       <a href="contact">
         here
       </a>
