fixed facebook link and removed unused socials

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
       <span style="font-weight: bold">emails</span>
       <span style="font-weight: normal"></span>
     </div>
-    <a href="404" class="icon-group">
+    <a href="https://www.facebook.com/troopsixtythree.altoona" class="icon-group">
       <p>
         Facebook
       </p>
@@ -35,29 +35,11 @@
     <br>
     <a href="404" class="icon-group">
       <p>
-        X
-      </p>
-      <img src="https://codehs.com/uploads/1f4154cde184ea0aab9ea5bf7048b3d7" class="cntcticons" alt="X">
-    </a>
-    <a href="404" class="icon-group">
-      <p>
         Instagram
       </p>
       <img src="https://codehs.com/uploads/6661776061c91e21bce06d4c881e8bb8" class="cntcticons" alt="Instagram">
     </a>
     <br>
-    <a href="404" class="icon-group">
-      <p>
-        Github
-      </p>
-      <img src="https://codehs.com/uploads/47c64d37b96e7570b39060260d1002b6" class="cntcticons" alt="Github">
-    </a>
-    <a href="https://iowaice.slack.com" class="icon-group">
-      <p>
-        Slack
-      </p>
-      <img src="404" class="cntcticons" alt="Slack">
-    </a>
     <br>
     <br>
     <br>
