fixed about image

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
           <h1 style="position:absolute; margin-top:35vh; width:100vw; padding:0px; font-size:50px; color:white; background:transparent; font-family:arial; z-index:4;">
             About Us
           </h1>
-          <img style="padding:0px; margin-top:-100px; position:relative; opacity:0.5; z-index:-1; width:100vw" alt="Troop Picture" src="https://codehs.com/uploads/a9d7dd4ef9b857a0570db3d09e78a0d7?text=Image+1">
+          <img style="padding:0px; margin-top:-40vh; position:relative; opacity:0.5; z-index:-1; width:100vw" alt="Troop Picture" src="https://codehs.com/uploads/a9d7dd4ef9b857a0570db3d09e78a0d7?text=Image+1">
         </div>
         <br>
         <br>
